--- a/index.html
+++ b/index.html
@@ -1,10 +1,49 @@
+<!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>適当なWebページ</title>
+  <style>
+    body {
+      font-family: 'Arial', sans-serif;
+      background-color: #f4f4f4;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+    header {
+      background-color: #4CAF50;
+      color: white;
+      padding: 1rem 0;
+    }
+    main {
+      padding: 2rem;
+    }
+    button {
+      padding: 0.7rem 1.2rem;
+      font-size: 1rem;
+      border: none;
+      background-color: #008CBA;
+      color: white;
+      cursor: pointer;
+      border-radius: 5px;
+    }
+    button:hover {
+      background-color: #005f75;
+    }
+  </style>
 </head>
 <body>
-    
+
+  <header>
+    <h1>ようこそ！</h1>
+  </header>
+
+  <main>
+    <p>これは適当につくったWebページです。</p>
+    <button onclick="alert('こんにちは！')">クリックしてみて</button>
+  </main>
+
 </body>
 </html>
